@@ -266,10 +266,10 @@ class LaTeXTranslator(nodes.NodeVisitor):
                '\\label{%s}' % self.idescape(id)
 
     def hyperlink(self, id):
-        return '{\\hyperref[%s]{' % (self.idescape(id))
+        return '{\\hyperref[%s]{' % self.idescape(id)
 
     def hyperpageref(self, id):
-        return '\\autopageref*{%s}' % (self.idescape(id))
+        return '\\autopageref*{%s}' % self.idescape(id)
 
     def idescape(self, id):
         return str(unicode(id).translate(tex_replace_map))
@@ -422,8 +422,9 @@ class LaTeXTranslator(nodes.NodeVisitor):
 
     def visit_production(self, node):
         if node['tokenname']:
-            self.body.append('\\production{%s}{' %
-                             self.encode(node['tokenname']))
+            tn = node['tokenname']
+            self.body.append(self.hypertarget('grammar-token-' + tn))
+            self.body.append('\\production{%s}{' % self.encode(tn))
         else:
             self.body.append('\\productioncont{')
     def depart_production(self, node):
@@ -1133,12 +1134,6 @@ class LaTeXTranslator(nodes.NodeVisitor):
                     self.context.append('}} (%s)' % self.hyperpageref(id))
                 else:
                     self.context.append('}}')
-        elif uri.startswith('@token'):
-            if self.in_production_list:
-                self.body.append('\\token{')
-            else:
-                self.body.append('\\grammartoken{')
-            self.context.append('}')
         else:
             self.builder.warn('unusable reference target found: %s' % uri,
                               (self.curfilestack[-1], node.line))
